--- a/CS601_HW2_Vashishta/ExternalStyleSheet.css
+++ b/CS601_HW2_Vashishta/ExternalStyleSheet.css
@@ -1,7 +1,107 @@
+/*Adding general style for the whole body*/
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 12pt;
+    font-size: 1.1em;
+    font-weight: 300;
     margin: 3em;
-    background-color: black;
+    background-image: url("Media/Wallpaper.jpg");
     color: white;
+    text-align: center;
+    table-layout: auto;
+}
+
+/*Adding styling for section titles*/
+.SectionTitles {
+    font-weight: bold;
+    font-size: 28pt;
+}
+
+/*Adding font color for hyper links - Souce:https://www.w3schools.com/css/css_link.asp*/
+a:link {
+    color: lightgreen;
+}
+
+a:visited {
+    color: green;
+}
+
+a:hover {
+    background-color: darkgray;
+}
+
+/*Adjusting font size where required*/
+.AdjustSize {
+    height: 500px;
+    ;
+    width: 600px;
+    ;
+}
+
+/*Adjusting layout as required*/
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/*Adjusting bullets and numbers as required*/
+ul {
+    list-style: square;
+    margin: 0;
+    padding: 0;
+}
+
+ol {
+    list-style: upper-roman;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    text-align: center;
+    list-style-position: inside;
+}
+
+/*Styling the table*/
+table {
+    border-color: coral;
+    border-style: groove;
+    border-width: 0.5em;
+    background-image: url("media/nsv2.png");
+    padding: 5px;
+
+}
+/*Styling the table*/
+table th {
+    padding: 5px 10px;
+}
+/*Styling the table*/
+table td {
+    padding: 5px 10px;
+}
+
+/*Styling the navigation pane*/
+nav {
+    border-color: bisque;
+    border-style: double;
+    background-image: url("media/nav.jpg");
+    background-repeat: no-repeat;    
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
+    float: left;
+    width: 100%;
+}
+/*Styling the bullets in nav*/
+nav ul {
+    list-style: none;
+}
+
+nav ul li a{
+    float: left;
+    display: inline;
+    padding: 10px;
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    background-color: whitesmoke;
 }
